tests/compilefail14.out
[1mtests/compilefail14.pas:11:13: [0m[1m[91merror:[0m Procedure two cannot be used as parameter to writeln()
    11 | 	writeln(two(7));